# hjq

./: .gitignore  CHANGELOG.md  hie.yaml  hjq.cabal  package.yaml
app/: Main.hs
src/Data/: Hjq.hs
src/Data/Hjq/: Parser.hs  Query.hs
test/: Spec.hs
