cabal-version:      2.4
name:               hjq
version:            0.1.0.0
synopsis:

homepage:           https://github.com/tana-gh/hjq

license:            BSD-3-Clause
license-file:       LICENSE
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010
    hs-source-dirs:   src

    exposed-modules:
        Data.Hjq
        Data.Hjq.Parser
        Data.Hjq.Query

    build-depends:
        base ^>=4.14.1.0,
        aeson,
        aeson-pretty,
        attoparsec,
        bytestring,
        errors,
        lens,
        lens-aeson,
        text,
        unordered-containers,
        vector

executable hjq
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs

    build-depends:
        base ^>=4.14.1.0,
        hjq,
        bytestring,
        text

test-suite hjq-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs

    build-depends:
        base ^>=4.14.1.0,
        hjq,
        aeson,
        HUnit,
        lens,
        lens-aeson,
        text,
        unordered-containers,
        vector
